@@ -29,6 +29,7 @@ ViSP 3.x.x (Version in development)
       standard enabled
     . [#1272] Unable to build ViSP with PCL/VTK build from source, VTK headers are not found by ViSP
     . [#1273] Build error in visp_java without deprecated functionalities
+    . [#1274] Build issue no member named clamp in namespace std
 ----------------------------------------------
 ViSP 3.6.0 (released September 22, 2023)
   - Contributors:
